<resources>
    <string name="app_name">Two Strings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_popular">Popular Movies</string>
    <string name="menu_explore">Explore</string>

    <string name="home_search_hint">Search Movies</string>
    <string name="operation_search">Search</string>

    <string name="title_activity_explore">Explore</string>
    <string name="overlay">Overlay</string>

    <string name="summary">Summary</string>
    <string name="recommended">Recommended</string>
    <string name="imdb_icon">Imdb Icon</string>
    <string name="rotten_tomatoes">Rotten Tomatoes</string>
    <string name="imdb">IMDb</string>
    <string name="_10">/10</string>
    <string name="percent_sign">%</string>
    <string name="cast_profile">Cast Profile</string>

    <string name="filter">Filter</string>
    <string name="confirm">Confirm</string>

    <string name="popularity">Popularity</string>
    <string name="ratings">Ratings</string>
    <string name="user_count">User Count</string>
    <string name="sort_by">Sort By</string>
    <string name="genre">Genre</string>
    <string name="region">Region</string>
    <string name="data_zero">No Data Found</string>

    <string-array name="region_array">
        <item />
        <item>China</item>
        <item>France</item>
        <item>India</item>
        <item>Japan</item>
        <item>United States of America</item>
    </string-array>
</resources>
